--- a/literatur.bib
+++ b/literatur.bib
@@ -14,6 +14,13 @@
 	year={2015}
 }
 
+@book{lampropoulos2015machine,
+  title={Machine Learning Paradigms},
+  author={Lampropoulos, Aristomenis S and Tsihrintzis, George A},
+  year={2015},
+  publisher={Springer}
+}
+
 @manual{amsldoc02,
 	author={{American Mathematical Society}},
 	title={User's Guide for the {\tt amsmath} Package},
